# UEParse

./: Cargo.toml  readme.md
src/: archives.rs  assets.rs
